# matlab2cpp-agentic-service

./: .env.example  .env.template  .gitignore  PROJECT_STRUCTURE.md  README.md  README_DETAILS.md  convert_arma_filter.py  convert_arma_filter_cli.py  convert_arma_filter_real.py  convert_arma_filter_step_by_step.py  pyproject.toml  run.py
config/: default_config.yaml
docker/testing/: Dockerfile  build.sh  requirements.txt
examples/env_files/: env.development  env.openai  env.vllm.local  env.vllm.remote
examples/matlab_samples/: .gitkeep  README.md
src/matlab2cpp_agent/: __init__.py  main.py
src/matlab2cpp_agent/agents/: __init__.py  assessor.py  code_mapper.py  conversion_planner.py  cpp_generator.py  hierarchical_analyzer.py  matlab_analyzer.py  matlab_content_analyzer.py  project_manager.py  quality_assessor.py
src/matlab2cpp_agent/cli/: __init__.py  general_converter.py
src/matlab2cpp_agent/services/: __init__.py  matlab2cpp_orchestrator.py  matlab2cpp_service.py
src/matlab2cpp_agent/tools/: llm_client.py
src/matlab2cpp_agent/utils/: __init__.py  config.py
src/matlab2cpp_agent/workflows/: __init__.py  conversion_workflow.py
src/matlab2cpp_agentic_service/: __init__.py  main.py
src/matlab2cpp_agentic_service/agents/: conversion_planner.py  cpp_generator.py  quality_assessor.py  (+2 more)
tests/: test_basic.py
tests/integration/: test_cmake_generation.py  test_enhanced_workflow.py  test_multi_file_conversion.py  test_native_langgraph_service.py  test_two_pass_compilation.py
tests/unit/: test_basic.py  test_helper_detection.py  test_helper_templates.py
(+111 files in other folders)
